# nzshm-runzi

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  headless_requirements.txt  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  publish-static-docs.yml  release.yml  run-tests.yml
.llm/: log.jsonl
INPUT_FILES/: average_solutions.toml  coulomb_rupture_sets.toml
demo/: disagg.toml  fail_demo.json  hazard.toml  hazard_config_nosite.json  hazard_test.toml  hazard_v2.toml  srm_test.json
doc/process/: AWS_docker_containers_setup.md  AWS_docker_setup_oq.md  build_srm_for_oq.md  openquake_processes.md
doc/usage/: hazard.md
docker/: .dockerignore  Dockerfile  java_container_task.sh  python_container_task.sh
docker/runzi-openquake/: .dockerignore  Docker_history.md  Dockerfile  Dockerfile_WORKING-BURNER  Dockerfile_local-HEAD  README.md  TODO-SRWG.md  abrahamson_2014.py  atkinson_2022.py  boore_2014.py  bradley_2013.py  campbell_bozorgnia_2014.py  chiou_youngs_2014.py  disagg.py  disaggregation.py  environ  kuehn_2020.py  mcverry_2006_MW.py  parker_2020.py  pynamodb_settings.py  stafford_2022.py
docker/runzi-opensha/: Dockerfile  environ
docs/: FEATURE_250_LARGE_REFACTOR_REVIEW.md  TODO_disaggs.md  development.md  index.md  installation.md  testing.md
docs/api/: coulomb.md
docs/architecture/: architecture.md  aws-auth-decision.md  aws-batch-compute-consolidation.md  cognito-identity-pool-role-mapping.md
docs/benchmarks/: ec2-sizing-coulomb-rupture-set.md  ec2-sizing-crustal-inversion.md  ec2-sizing-oq-hazard.md
docs/process/: openquake_processes.md
docs/usage/: AWS_docker_setup_oq.md  AWS_docker_setup_oq_local-HEAD.md  AWS_docker_setup_oq_local-WORKING.md  access_tiers.md  aws_batch.md  base_docker_setup_oq.md  cli.md  environment_variables.md  example_hazard_config_file.md  hazard.md  introduction.md  local_docker_setup_oq.md
docs/user_guide/: index.md  inversion.md
gen_docs/: generate_example_file_list.py
runzi/: _oq_runner.py  arguments.py  build_tasks.py  configuration.py  job_runner.py  protocols.py  utils.py
runzi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runzi/automation/: __init__.py  azimuthal_rupture_set_builder_task.py  build_manual_index.py  build_named_fault_mfd_index.py  build_rupture_set_index.py  config.py  file_utils.py  hazPlot.py  hazard_output_helper.py  inversion_hazard_report_task.py  is_repair.py  local_config.py  opensha_task_factory.py  python_task_factory.py  run_average_solutions.py  run_azimuthal_rupture_sets.py  run_coulomb_rupture_sets.py  run_crustal_inversions.py  run_export_hazard.py  run_gt_index.py  run_inversion_diagnostics.py  run_inversion_hazard.py  run_oq_convert_solution.py  run_oq_disagg.py  run_oq_disagg_post.py  run_oq_hazard.py  run_oq_hazard_report.py  run_rupset_diagnostics.py  run_save_distseis_mastertable.py  run_save_file_archive.py  run_save_oq_configuration_template.py  run_scale_and_convert.py  run_scale_solution.py  run_solution_subsets.py  run_store_hazard_ths.py  run_subduction_inversions.py  run_subduction_rupture_sets.py  run_time_dependent_solution.py  runner_inputs.py  schedule_tasks.py  (+3 more)
runzi/aws/: __init__.py  aws.py  batch_query.py  s3_folder_upload.py  session.py
runzi/aws_client/: env.py  inversion_diagnostic_runner.py  receive_messages.py  sns_trigger.py  upload.py
runzi/cli/: __init__.py  batch_cli.py  build_and_deploy_container.py  cli.py  cli_helpers.py  crustal_inversion_runner.py  docker_wrapper.py  hazard_cli.py  inv_setup.py  inversion_cli.py  inversion_diagnostic_runner.py  inversion_post_process_cli.py  load_json.py  openquake_hazard.py  reports_cli.py  runzi_cli.py  rupture_sets_cli.py  save_bg_file_archives.py  save_distseis_mastertable.py  subduction_inversion_runner.py  utils_cli.py
runzi/configuration/: arguments.py  average_inversion_solutions.py  configuration.py  coulomb_rupture_sets.py  crustal_inversion_permutations.py  crustal_inversions.py  inversion_diagnostics.py  inversions.py  openquake_hazard.py  oq_disagg.py  oq_hazard.py  oq_hazard_report.py  oq_opensha_nrml_convert.py  ruptureset_diagnostics.py  scale_inversion_solution.py  subduction_inversions.py  subduction_rupture_sets.py  time_dependent_inversion_solution.py
runzi/execute/: __init__.py  arguments.py  average_solutions_task.py  coulomb_rupture_set_builder_task.py  crustal_inversion_solution_builder_task.py  crustal_inversion_solution_task.py  hazard_args.py  hazard_inputs.py  inversion_diags_report_task.py  inversion_solution_builder.py  inversion_solution_builder_task.py  inversion_sub_solution_task.py  openquake_hazard_task.py  oq_disagg_task.py  oq_hazard_report_task.py  oq_hazard_task.py  oq_opensha_convert_task.py  prepare_inputs.py  ruptset_diags_report_task.py  scale_solution_task.py  subduction_inversion_solution_builder_task.py  subduction_inversion_solution_task.py  subduction_rupture_set_builder_task.py  time_dependent_solution_task.py  utils.py
scripts/: cli.py  deploy_docker.py  rupset_report_mem_bench.py
test/: __init__.py  conftest.py  test_disagg.py  test_fault_section.py  test_openquake_hazard_task.py  test_oq_build_hazard_tasks.py  test_oq_hazard_config_validation.py  test_oq_hazard_task.py  test_run_oq_hazard.py  test_run_subduction_inversions.py  test_scaling.py
tests/: __init__.py  test_aws_session.py  test_batch_cli.py  test_batch_query.py  test_build_and_deploy_container.py  test_build_tasks_job_name.py  test_cli_cluster_mode.py  test_docker_wrapper.py  test_ec2_coulomb_sizing.py  test_ec2_oq_hazard_sizing.py  test_ec2_sizing_scripts.py  test_execute_openquake.py  test_get_config.py  test_get_ecs_job_config.py  test_get_oq_disagg_tasks.py  test_get_oq_hazard_tasks.py  test_inversion_input.py  test_java_container_task_script.py  test_openquake_hazard_task.py  test_opensha_task_factory.py  test_oq_args.py  test_resolve_job_definition_digest.py  test_swept_args.py  test_task_runtime_args.py  test_validators.py  test_wait_for_gateway.py
(+428 files in other folders)
