[project]
name = "runzi"
version = "0.2.0"
readme = "README.md"
authors = [
    {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"}, 
    {name = "Chris Chamberlain", email = "chrisbc@artisan.co.nz"}, 
    {name = "Oakley Jurgens", email = "o.jurgens@gns.cri.nz"},
]
description = "scripting and cli for the NSHM"
license = "GPL-3.0-only"
requires-python = ">=3.11,<3.12"
packages = [
    { include = "runzi" },
    { include = "tests", format = "sdist" },
]
dependencies = [
    "gitpython (>=3.1.46)",
    "py4j (==0.10.9.1)",
    "boto3 (>=1.26.43)",
    "lxml (>=4.9.2)",
    "tqdm (>=4.67.3)",
    "click (>=8.1.7)",
    "python-dateutil (>=2.8.2)",
    "nzshm-common[geometry] (>=0.8.4)",
    "pytz (>=2025.1)",
    "pydantic (>=2.12)",
    "nzshm-model (>=0.13.6)",
    "python-dotenv (>=1.1.0)",
    "toshi-hazard-store (>=1.2.3,<2.0.0)",
    "typer (>=0.17.4,<0.18.0)",
    "solvis (>=1.2.0,<2.0.0)",
    "nshm-toshi-client (>=1.1.0,<2.0.0)",
    "nzshm-hazlab (>=0.1.1,<0.2.0)",
]




[project.scripts]
runzi = 'runzi.cli.runzi_cli:app'


[dependency-groups]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "bump2version",
    "tox",
    "mypy",
    "pytest-cov",
    "types-requests",
    "types-pytz",
    "types-python-dateutil",
    "pytest-mock",
    "vulture",
    "safety",
    "pip-audit",
]


doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "griffe (>=2.0.0,<3.0.0)",
    "griffe-pydantic (>=1.3.1,<2.0.0)",
]



[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | runzi/CONFIG
)/
'''

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

