[project]
name = "runzi"
version = "0.10.1"
readme = "README.md"
authors = [
    {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"},
    {name = "Chris Chamberlain", email = "chrisbc@artisan.co.nz"},
    {name = "Oakley Jurgens", email = "o.jurgens@gns.cri.nz"},
]
description = "scripting and cli for the NSHM"
license = "GPL-3.0-only"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gitpython>=3.1.46",
    "py4j==0.10.9.1",
    "boto3>=1.26.43",
    "python-dateutil>=2.8.2",
    "nzshm-common[geometry]>=0.9.3",
    "pytz>=2025.1",
    "pydantic>=2.12",
    "python-dotenv>=1.1.0",
    "typer>=0.17.4,<0.26.0",
    "solvis>=1.2.0,<2.0.0",
    "nzshm-hazlab>=0.1.3,<0.2.0",
    "nzshm-model>=0.15.3",
    "nshm-toshi-client>=1.3.0",
    "toshi-hazard-store>=2.1.0",
]


[project.scripts]
runzi = 'runzi.cli.runzi_cli:app'


[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "bump2version",
    "tox",
    "mypy",
    "pytest-cov",
    "types-requests",
    "types-pytz",
    "types-python-dateutil",
    "pytest-mock",
    "vulture",
    "safety",
    "pip-audit",
    "chardet<6",
]


doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "griffe>=2.0.0,<3.0.0",
    "griffe-pydantic>=1.3.1,<2.0.0",
    "griffe-fieldz>=0.4.0,<0.6.0",
    "mkdocs-gen-files>=0.6.0,<0.7.0",
]

[tool.uv]
exclude-newer = "1 week"
[tool.uv.exclude-newer-package]
"nzshm-common" = false
"nzshm-model" = false
"toshi-hazard-store" = false
"nzshm-hazlab" = false
"solvis" = false
"nshm-toshi-client" = false
"toshi-hazard-post" = false

[tool.uv.build-backend]
module-name = "runzi"
module-root = ""


[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["runzi/CONFIG"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP", "G004", "B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["D100", "D103"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "preserve"

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"
